--- a/src/styles/common/App.css
+++ b/src/styles/common/App.css
@@ -15,6 +15,12 @@
   justify-content: space-around;
   transition: 0.5s;
 }
+.App nav .img-wrap
+{
+  width: 50px;
+  height: 50px;
+  display: flex;
+}
 .App nav .toggle
 {
   scale: 0;
@@ -24,7 +30,7 @@
   text-decoration: none;
   color: #000;
   border-radius: 10px;
-  padding: 20px 10px;
+  padding: 10px;
 }
 .App nav a:hover
 {
@@ -62,7 +68,7 @@
   width: 400px;
   height: 400px;
   border-radius: 30px;
-  background: linear-gradient(135deg, #1cbfff, #fff);
+  background: linear-gradient(135deg, #0c9ed8, #d6d7df);
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -82,13 +88,15 @@
   }
   .App nav.active
   {
-    background: #d4d4d6;
     min-height: 300px;
     align-items: start;
     transition: 1s;
   }
   .App nav .toggle
   {
+    position: absolute;
+    top: -5px;
+    right: 10px;
     width: 50px;
     height: 50px;
     /* background: #000; */
@@ -100,7 +108,7 @@
   {
     content: '';
     position: absolute;
-    top: 23px;
+    top: 30px;
     right: 15px;
     width: 20px;
     height: 2px;
@@ -111,12 +119,12 @@
   {
     content: '';
     position: absolute;
-    top: 13px;
+    top: 25px;
     right: 15px;
     width: 20px;
     height: 2px;
     background: #141414;
-    box-shadow: 0px 20px 0px #141414;
+    box-shadow: 0px 10px 0px #141414;
     transition: 0.5s;
   }
   .App nav.active .toggle::before
@@ -125,7 +133,7 @@
   }
   .App nav.active .toggle::after
   {
-    top: 23px;
+    top: 30px;
     transform: rotate(45deg);
     box-shadow: 0px 0px 0px #fff;
   }
