--- a/src/styles/common/App.css
+++ b/src/styles/common/App.css
@@ -1,140 +1,5 @@
-.App 
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
+*
 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  min-height: 100vh;
-}
-.App nav
-{
-  position: fixed;
-  top: 0;
-  min-width: 100vw;
-  display: flex;
-  justify-content: space-around;
-  transition: 0.5s;
-}
-.App nav .img-wrap
-{
-  width: 50px;
-  height: 50px;
-  display: flex;
-}
-.App nav .toggle
-{
-  scale: 0;
-}
-.App nav a
-{
-  text-decoration: none;
-  color: #000;
-  border-radius: 10px;
-  padding: 10px;
-}
-.App nav a:hover
-{
-  background: #000;
-  color: #fff;
-  transition: 0.5s;
-}
-.num
-{
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
-}
-.input
-{
-  display: flex;
-  gap: 20px;
-  padding: 10px 20px;
-}
-.input label
-{
-  min-width: 70px;
-}
-.input input
-{
-  outline: none;
-  border: none;
-  box-shadow: 0px 0px 10px #d4d4d6;
-}
-.show
-{
-  position: relative;
-  top: 20px;
-  width: 400px;
-  height: 400px;
-  border-radius: 30px;
-  background: linear-gradient(135deg, #0c9ed8, #d6d7df);
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
-}
-
-
-/* responsible web */
-@media (max-width: 991px) 
-{
-  .App nav
-  {
-    /* transform: translateY(-300px); */
-    background: #d4d4d6;
-    display: flex;
-    align-items: center;
-  }
-  .App nav.active
-  {
-    min-height: 300px;
-    align-items: start;
-    transition: 1s;
-  }
-  .App nav .toggle
-  {
-    position: absolute;
-    top: -5px;
-    right: 10px;
-    width: 50px;
-    height: 50px;
-    /* background: #000; */
-    cursor: pointer;
-    scale: 1;
-    padding-top: 10px;
-  }
-  .App nav .toggle::before
-  {
-    content: '';
-    position: absolute;
-    top: 30px;
-    right: 15px;
-    width: 20px;
-    height: 2px;
-    background: #141414;
-    transition: 0.5s;
-  }
-  .App nav .toggle::after
-  {
-    content: '';
-    position: absolute;
-    top: 25px;
-    right: 15px;
-    width: 20px;
-    height: 2px;
-    background: #141414;
-    box-shadow: 0px 10px 0px #141414;
-    transition: 0.5s;
-  }
-  .App nav.active .toggle::before
-  {
-    transform: rotate(-45deg);
-  }
-  .App nav.active .toggle::after
-  {
-    top: 30px;
-    transform: rotate(45deg);
-    box-shadow: 0px 0px 0px #fff;
-  }
+  font-family: 'Source Sans Pro', sans-serif;
 }
