--- a/src/styles/common/Nav.css
+++ b/src/styles/common/Nav.css
@@ -12,6 +12,7 @@
   align-items: center;
   background: var(--background-color);
   padding: 8px 12px;
+  transition: 1s;
 }
 .navbar_logo
 {
@@ -35,6 +36,7 @@
   margin: 0;
   padding-left: 0;
   list-style: none;
+  transition: 1s;
 }
 .navbar_menu li
 {
@@ -138,6 +140,7 @@ nav.open .toggle::after
   .navbar.open .navbar_menu
   {
     display: flex;
+    transition: 0.5s;
   }
   .navbar_menu li
   {
